Fix alignment of statistics.

--- a/css/style.css
+++ b/css/style.css
@@ -2,53 +2,33 @@
     margin: 0 auto;
     max-width: 700px;
 }
-.container-narrow > hr {
-    margin: 30px 0;
-}
 
-.nav-pills > .active {
-    background-color:rgb(30,92,122);
-}
-
-body {
-    background-color:#f0f0f0;
-}
-
-.statistics li {
-    line-height: 2.0;
-    font-size: 1.3em;
+.statistics div {
+    margin-left: auto;
+    margin-right: auto;
 }
 
 h2 {
     line-height: 1.25;
 }
 
-img .screenshot {
-    margin: 30px 30px 30px 30px;
-}
-
-.screenshot.row-fluid {
-    padding: 10px 0;
-}
-
 .banner {
-    margin: 30px 0;
+    margin: 40px 0px;
     text-align: center;
 }
 
-.banner h1 {
+h1 {
     font-size: 74px;
     line-height: 1.25;
 }
 
-.banner h2 {
+h2 {
     font-size: 36px;
-    margin: 20px 30px;
+    margin: 30px 0;
+    text-align: center;
 }
 
-#logo {
-    margin: 25px 0;
-    height: 140px;
-    width: 140px;
+.statistics.well { 
+    margin: 0 50px;
 }
 
